# react-native-v8

./: .gitignore  .npmignore  CHANGELOG.md  LICENSE  README.md  RNV8.podspec  app.plugin.js  bun.lockb  expo-module.config.json  package.json  react-native.config.js
.circleci/: Dockerfile  config.yml
.github/workflows/: android.yml  expo-android.yml  expo-ios.yml  ios.yml
android/: CMakeLists.txt  build.gradle  mkcodecache.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: OnLoad.cpp  V8ExecutorFactory.cpp  V8ExecutorFactory.h
android/src/main/java/io/csie/kudo/reactnative/v8/: ReactNativeV8Package.java
android/src/main/java/io/csie/kudo/reactnative/v8/executor/: V8Executor.java  V8ExecutorFactory.java  V8Module.java  V8RuntimeConfig.java
android/src/stub_bundle/: stub.bundle
expo/: build.gradle
expo/src/main/: AndroidManifest.xml
expo/src/main/java/io/csie/kudo/reactnative/expo/: V8ExpoAdapterPackage.java
expo/src/main/java/io/csie/kudo/reactnative/v8/expo/: V8ExpoAdapterPackage.java
patches/: build_with_v8.patch
plugin/src/: generateCode.ts  withV8ExpoAdapter.ts
scripts/: build.sh  env.sh  export_npm_env.sh  gen_project.py
scripts/lib/: patcher.py
src/androidexecutor/reactexecutor/: Android.mk  OnLoad.cpp  V8Executor.java  V8ExecutorFactory.cpp  V8ExecutorFactory.h  V8ExecutorFactory.java  V8RuntimeConfig.java
src/iosexecutor/V8Executor/: V8Executor.h  V8ExecutorFactory.h  V8ExecutorFactory.mm
src/patches/: build_with_v8.patch
src/sowrapper/: Android.mk
src/v8runtime/: Android.mk  HostProxy.cpp  HostProxy.h  JSIV8ValueConverter.cpp  JSIV8ValueConverter.h  MainLoopRegistry.cpp  MainLoopRegistry.h  V8Inspector.cpp  V8Inspector.h  V8PointerValue.cpp  V8PointerValue.h  V8Runtime.cpp  V8Runtime.h  V8RuntimeConfig.h  V8RuntimeFactory.cpp  V8RuntimeFactory.h
v8runtime/: JSIV8ValueConverter.cpp  V8PointerValue.cpp  V8PointerValue.h  V8Runtime.cpp
